# Spherecore

./: Ape security.sphe  AstToBinary.cpp  Avx2OptimizedComputations.cpp  BasicCppAsmHybridCompiler.cpp  BinaryGenerator.cpp  CMakeLists.txt  CUDAKernelForGPU-AcceleratedComputation.cpp  CompileAsm.cpp  CompilerDiagnosticsOutput.md  ConvertingBinaryToExecutable(.exe).cpp  DebuggerMode.cpp  DebuggingApi.cpp  EnableLTO&PGOforSpherecoreCompiler.cpp  EverythingTogether.cpp  ExecutionEnginex64Assembly.cpp  FastSystemCallsForOptimizedOsInteraction.cpp  File extensions.txt  FinalExecutionFlow(FullyOptimized).cpp  FinalExecutionFlow.cpp  FullOptimizedExecutionFlow.cpp  Functions.c  GenerateAsm.cpp  GeneratingBinaryCode.cpp  HighSpeedSecureFramework.cpp  HybridExecutionPipeline.cpp  ImplementingAlignedMemoryAllocation.cpp  ImplementingDiagnosticsInCpp.cpp  ImplementingJIT withLLVMInSpherecore.cpp  ImplementingMultithreading.cpp  InjectingABreakpointInX86-64Assembly.cpp  InlineAssemblyForDirectRegisterUsage(x86-64).cpp  Instruction-LevelExecutionTracing.cpp  JIT-AOTFunctionLoader.cpp  LoopsAndConditionals.cpp  Main.sphe  MemoryAllocation.c  MemoryLeakDetectionUsingAddressSanitizer.cpp  Multithreading.c  OfficialHowTo.md  OptimizeSpherecorCompilationForRyzen3Registers.asm  (+13 more)
